kubernetes/apps/flux-system/addons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  # external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    auth.home.arpa/enabled: "true"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/enable: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "flux-receiver.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: flux-receiver-tls
